<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_hint"
        android:inputType="text|textCapWords"
        android:background="@color/back_input"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_clear" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/text_button"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_label"
        android:textColor="@color/view_font"
        />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:layout_marginRight="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/text_red" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_blue"/>
    </RadioGroup>

    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="#c0c0c0"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/array_cidades" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="#c0c0c0"/>

    <ImageView
        android:id="@+id/img_imaxe"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/text_image"
        android:src="@drawable/compostela"
        android:layout_gravity="center"
        android:onClick="onCambiarImaxeClick"
        />

    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="#c0c0c0"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:orientation="vertical" >

    <Chronometer
        android:id="@+id/cronometro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp" />


        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/text_start"
            android:textOff="@string/text_stop"
            />

    </LinearLayout>


</LinearLayout>